@@ -36,13 +36,18 @@ dependencies {
 }
 
 compileTestJava {
-  options.forkOptions.executable = Jvm.current().javacExecutable
+  options.forkOptions.javaHome = Jvm.current().javaHome
   sourceCompatibility = 1.8
   targetCompatibility = 1.8
 }
 
 test {
-  executable = Jvm.current().javaExecutable
+  if (!testJava.javaVersion.isJava8Compatible()) {
+    executable = Jvm.current().javaExecutable
+  }
+  if (testJava.javaVersion.isJava9Compatible()) {
+    jvmArgs += ['--add-modules', 'java.xml.bind']
+  }
 }
 
 tasks.withType(JavaCompile) {
