@@ -36,6 +36,12 @@ dependencies {
   testCompile "com.fasterxml.jackson.core:jackson-databind:2.7.5"
 }
 
+test {
+  if (testJava.javaVersion.isJava9Compatible()) {
+    jvmArgs += ['--add-modules', 'java.xml.bind']
+  }
+}
+
 tasks.withType(JavaCompile) {
   options.compilerArgs += ['-Werror']
 }
